# Sable-Overlay-Gamer

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: release.yml
crates/sable-core/: Cargo.toml
crates/sable-core/src/: lib.rs
crates/sable-etw/: Cargo.toml
crates/sable-etw/src/: lib.rs
crates/sable-games/: Cargo.toml
crates/sable-games/src/: lib.rs
crates/sable-gpu/: Cargo.toml
crates/sable-gpu/src/: lib.rs
crates/sable-overlay/: Cargo.toml
crates/sable-overlay/src/: main.rs
crates/sable-presets/: Cargo.toml
crates/sable-presets/src/: lib.rs
crates/sable-service/: Cargo.toml
crates/sable-service/src/: main.rs
scripts/: prep-binaries.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: ConfirmModal.module.css  ConfirmModal.tsx  DrawerPanel.module.css  DrawerPanel.tsx  FrametimeChart.module.css  FrametimeChart.tsx  GameTile.module.css  GameTile.tsx  MetricCard.module.css  MetricCard.tsx  MetricRow.module.css  MetricRow.tsx  OverlayPreview.module.css  OverlayPreview.tsx  PresetCard.module.css  PresetCard.tsx  RiskBadge.module.css  RiskBadge.tsx  Sidebar.module.css  Sidebar.tsx  StatusBadge.module.css  StatusBadge.tsx  Titlebar.module.css  Titlebar.tsx  ToastNotification.module.css  ToastNotification.tsx
src/lib/: api.ts
src/screens/: BenchmarkDetail.tsx  Benchmarks.tsx  BottleneckReport.tsx  Dashboard.module.css  Dashboard.tsx  GameProfile.tsx  Games.tsx  Onboarding.module.css  Onboarding.tsx  Optimizer.tsx  OverlayConfig.tsx  Settings.tsx  SystemInfo.tsx  shared.module.css
src/stores/: appStore.ts  benchmarkStore.ts  gamesStore.ts  presetsStore.ts  telemetryStore.ts
src/tokens/: tokens.css
