[workspace]
members = [
    "src-tauri",
    "crates/sable-core",
    "crates/sable-games",
    "crates/sable-gpu",
    "crates/sable-etw",
    "crates/sable-presets",
    "crates/sable-service",
    "crates/sable-overlay",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
bincode = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
winapi = { version = "0.3", features = [
    "winsvc",
    "winreg",
    "processthreadsapi",
    "powerbase",
    "sysinfoapi",
    "pdh",
    "handleapi",
    "tlhelp32",
    "psapi",
    "winnt",
    "memoryapi",
    "synchapi",
    "namedpipeapi",
    "fileapi",
    "errhandlingapi",
    "wow64apiset",
] }
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_System_Power",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Performance",
    "Win32_System_SystemInformation",
    "Win32_System_Time",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
] }
