[package]
name = "sable-games"
version = "0.1.0"
edition = "2021"

[dependencies]
sable-core = { path = "../sable-core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
windows = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
