[package]
name = "sable-overlay"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sable-overlay"
path = "src/main.rs"

[dependencies]
sable-core = { path = "../sable-core" }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bincode = { workspace = true }
windows = { workspace = true }
