[package]
name = "sable-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sable-service"
path = "src/main.rs"

[dependencies]
sable-core = { path = "../sable-core" }
sable-gpu = { path = "../sable-gpu" }
sable-etw = { path = "../sable-etw" }
sable-presets = { path = "../sable-presets" }
sable-games = { path = "../sable-games" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true }
windows = { workspace = true }
